# raven-nest-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  deny.toml  rust-toolchain.toml  server.json
.github/workflows/: ci.yml  release.yml
config/: default.toml  sudoers-raven-nest
crates/raven-core/: Cargo.toml
crates/raven-core/src/: audit.rs  config.rs  error.rs  executor.rs  lib.rs  msf_client.rs  safety.rs  scan_manager.rs
crates/raven-report/: Cargo.toml
crates/raven-report/src/: finding.rs  html.rs  json.rs  lib.rs  markdown.rs  report.rs  sarif.rs  store.rs  summary.rs
crates/raven-server/: Cargo.toml
crates/raven-server/src/: budget.rs  error.rs  lib.rs  main.rs  progress.rs  server.rs
crates/raven-server/src/tools/: dalfox.rs  dnsrecon.rs  dnsx.rs  engagement.rs  enum4linux_ng.rs  extract.rs  feroxbuster.rs  ffuf.rs  findings.rs  gitleaks.rs  http.rs  httpx.rs  hydra.rs  john.rs  katana.rs  lenient.rs  masscan.rs  mod.rs  msf_auxiliary.rs  msf_exploit.rs  msf_module_info.rs  msf_post.rs  msf_search.rs  msf_sessions.rs  netexec.rs  nikto.rs  nmap.rs  nuclei.rs  ping.rs  resources.rs  scans.rs  sqlmap.rs  subfinder.rs  testssl.rs  trufflehog.rs  whatweb.rs  wpscan.rs
crates/raven-server/tests/: integration_test.rs
docs/: DATA_FLOW.md  IMPROVEMENTS.md  LOCAL_AI_INTEGRATION.md  METASPLOIT.md  USAGE.md
docs/archive/: IMPROVEMENTS.md
docs/plans/: 2026-03-05-tool-validation-bugfixes-design.md  2026-03-05-tool-validation-bugfixes.md
packaging/aur/: .SRCINFO  PKGBUILD  README.md
tests/: TEST_RESULTS.md  manual_test_harness.py
