[workspace]
members = ["crates/raven-core", "crates/raven-server", "crates/raven-report"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.93.0"

[workspace.dependencies]
# MCP SDK
rmcp = { version = "1.1.0", features = ["server", "macros", "transport-io"] }

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }

# Serialisation
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.33"
toml = "0.9.8"

# HTTP client
reqwest = { version = "0.13.2", features = ["json"] }

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Logging (stderr only - stdout is MCP transport)
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

# Utilities
chrono = { version = "0.4.44", features = ["serde"] }
url = "2.5.8"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
libc = "0.2.182"
tempfile = "3.19.1"
roxmltree = "0.20"

# Internal crates
raven-core = { path = "crates/raven-core" }
raven-report = { path = "crates/raven-report" }

[profile.release]
strip = true
lto = "thin"
